# ClassFromTypedDict

./: ClassFromTypedDict.py  README.md  classfromtypeddict.py  pyproject.toml
