[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ClassFromTypedDict"
version = "0.0.3"
authors = [
  { name="marsoupilami"},
]
description = "ClassFromTypedDict converts a dict following a TypedDict schema into a class"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=1,<2"]