[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "classfromtypeddict"
version = "0.0.4"
authors = [
  { name="marsoupilami"},
]
description = "ClassFromTypedDict converts a dict following a TypedDict schema into a class"
readme = "README.md"
requires-python = ">=3.10"